// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketAttachments component private should display an error message if there's private attachments 1`] = `
<div
  className="component"
>
  <div
    className="mb-2"
  >
    <i
      className="material-icons mr-1"
    >
      warning
    </i>
     There is
     
    3
     attachment(s) to this message which we couldn't download.
  </div>
  <Lightbox
    backdropClosesModal={true}
    closeButtonTitle="Close (Esc)"
    currentImage={0}
    enableKeyboardInput={true}
    imageCountSeparator=" of "
    images={
      Array [
        Object {
          "caption": "foo",
          "src": "http://proxy-url/cw-1,s8MK7LSC6RLh94fGgMBYlNoFyfP-9ZuGz67e8Ec8PZpk/http://gorgias.io/bar",
        },
        Object {
          "caption": "bar",
          "src": "http://proxy-url/cw-1,seKwRTXuZZfHIF0O-p6Pte13-uEQ7wUFn5tkRNiZDeo8/http://gorgias.io/baz",
        },
        Object {
          "caption": "baz",
          "src": "http://proxy-url/cw-1,sSfpnD-PAiV-KrmrNl6gZ9Cq7eu50_7Sd3bZqOar3Jt4/http://gorgias.io/foo",
        },
      ]
    }
    isOpen={false}
    leftArrowTitle="Previous (Left arrow key)"
    onClickNext={[Function]}
    onClickPrev={[Function]}
    onClickShowNextImage={true}
    onClickThumbnail={[Function]}
    onClose={[Function]}
    preloadNextImage={true}
    rightArrowTitle="Next (Right arrow key)"
    showCloseButton={true}
    showImageCount={true}
    showThumbnails={true}
    theme={Object {}}
    thumbnailOffset={2}
    width={1024}
  />
</div>
`;

exports[`TicketAttachments component private should display both an error message and attachments 1`] = `
<div
  className="component"
>
  <div
    className="mb-2"
  >
    <i
      className="material-icons mr-1"
    >
      warning
    </i>
     There is
     
    1
     attachment(s) to this message which we couldn't download.
  </div>
  <a
    className="item hasPreview"
    href="http://gorgias.io/bar"
    key="0"
    onClick={[Function]}
    rel="noopener noreferrer"
    style={
      Object {
        "backgroundImage": "url(http://proxy-url/120x80,s8MK7LSC6RLh94fGgMBYlNoFyfP-9ZuGz67e8Ec8PZpk/http://gorgias.io/bar)",
      }
    }
    target="_blank"
  >
    <div
      className="itemMeta"
    >
      <div
        className="metaName"
      >
        foo
      </div>
      <div
        className="metaType"
      >
        <i
          className="material-icons md-2"
        >
          photo_library
        </i>
      </div>
    </div>
  </a>
  <a
    className="item hasPreview"
    href="http://gorgias.io/foo"
    key="1"
    onClick={[Function]}
    rel="noopener noreferrer"
    style={
      Object {
        "backgroundImage": "url(http://proxy-url/120x80,sSfpnD-PAiV-KrmrNl6gZ9Cq7eu50_7Sd3bZqOar3Jt4/http://gorgias.io/foo)",
      }
    }
    target="_blank"
  >
    <div
      className="itemMeta"
    >
      <div
        className="metaName"
      >
        baz
      </div>
      <div
        className="metaType"
      >
        <i
          className="material-icons md-2"
        >
          photo_library
        </i>
      </div>
    </div>
  </a>
  <Lightbox
    backdropClosesModal={true}
    closeButtonTitle="Close (Esc)"
    currentImage={0}
    enableKeyboardInput={true}
    imageCountSeparator=" of "
    images={
      Array [
        Object {
          "caption": "foo",
          "src": "http://proxy-url/cw-1,s8MK7LSC6RLh94fGgMBYlNoFyfP-9ZuGz67e8Ec8PZpk/http://gorgias.io/bar",
        },
        Object {
          "caption": "bar",
          "src": "http://proxy-url/cw-1,sq2V_C_-Dm_KHtaDdj_L_mXkIrrm2xS7uZ8pLuRDzmZ0/https://gorgias.io/baz",
        },
        Object {
          "caption": "baz",
          "src": "http://proxy-url/cw-1,sSfpnD-PAiV-KrmrNl6gZ9Cq7eu50_7Sd3bZqOar3Jt4/http://gorgias.io/foo",
        },
      ]
    }
    isOpen={false}
    leftArrowTitle="Previous (Left arrow key)"
    onClickNext={[Function]}
    onClickPrev={[Function]}
    onClickShowNextImage={true}
    onClickThumbnail={[Function]}
    onClose={[Function]}
    preloadNextImage={true}
    rightArrowTitle="Next (Right arrow key)"
    showCloseButton={true}
    showImageCount={true}
    showThumbnails={true}
    theme={Object {}}
    thumbnailOffset={2}
    width={1024}
  />
</div>
`;

exports[`TicketAttachments component read-only should match snapshot 1`] = `
<div
  className="component"
>
  <a
    className="item hasPreview"
    href="http://gorgias.io/bar"
    key="0"
    onClick={[Function]}
    rel="noopener noreferrer"
    style={
      Object {
        "backgroundImage": "url(http://proxy-url/120x80,s8MK7LSC6RLh94fGgMBYlNoFyfP-9ZuGz67e8Ec8PZpk/http://gorgias.io/bar)",
      }
    }
    target="_blank"
  >
    <div
      className="itemMeta"
    >
      <div
        className="metaName"
      >
        foo
      </div>
      <div
        className="metaType"
      >
        <i
          className="material-icons md-2"
        >
          photo_library
        </i>
      </div>
    </div>
  </a>
  <a
    className="item"
    href="foo"
    key="1"
    onClick={[Function]}
    rel="noopener noreferrer"
    target="_blank"
  >
    <div
      className="itemMeta"
    >
      <div
        className="metaName"
      >
        bar
      </div>
      <div
        className="metaType"
      >
        <i
          className="material-icons md-2"
        >
          library_books
        </i>
      </div>
    </div>
  </a>
  <Lightbox
    backdropClosesModal={true}
    closeButtonTitle="Close (Esc)"
    currentImage={0}
    enableKeyboardInput={true}
    imageCountSeparator=" of "
    images={
      Array [
        Object {
          "caption": "foo",
          "src": "http://proxy-url/cw-1,s8MK7LSC6RLh94fGgMBYlNoFyfP-9ZuGz67e8Ec8PZpk/http://gorgias.io/bar",
        },
      ]
    }
    isOpen={false}
    leftArrowTitle="Previous (Left arrow key)"
    onClickNext={[Function]}
    onClickPrev={[Function]}
    onClickShowNextImage={true}
    onClickThumbnail={[Function]}
    onClose={[Function]}
    preloadNextImage={true}
    rightArrowTitle="Next (Right arrow key)"
    showCloseButton={true}
    showImageCount={true}
    showThumbnails={true}
    theme={Object {}}
    thumbnailOffset={2}
    width={1024}
  />
</div>
`;
